Classloading throws exceptions over already pending exceptions

XMLWordPrintable

    • b18

        This reproduces in CTW, but it is not compiler specific.

        $ export JAVA_HOME=<point to fastdebug build>
        $ export PATH=$JAVA_HOME/bin:$PATH
        $ cd test/hotspot/jtreg/testlibrary/ctw
        $ make
        $ cd dist
        $ wget https://repo1.maven.org/maven2/activesoap/jaxb-xalan/1.5/jaxb-xalan-1.5.jar
        $ ./ctw.sh jaxb-xalan-1.5.jar

        # Internal Error (/home/shipilev/shipilev-jdk/src/hotspot/share/utilities/exceptions.cpp:366), pid=30680, tid=30681
        # assert(incoming_exception.is_null()) failed: Pending exception while throwing java/lang/IllegalAccessError superinterface check failed: class com.sun.org.apache.xalan.internal.transformer.TransformerImpl (in unnamed module @0x4e515669) cannot access class com.sun.org.apache.xpath.internal.ExtensionsProvider (in module java.xml) because module java.xml does not export com.sun.org.apache.xpath.internal to unnamed module @0x4e515669

        Stack: [0x0000ffff8b89b000,0x0000ffff8ba99000], sp=0x0000ffff8ba93d60, free space=2019k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xb58c64] Exceptions::new_exception(JavaThread*, Symbol*, char const*, Handle, Handle, Handle, Exceptions::ExceptionMsgToUtf8Mode)+0x764 (exceptions.cpp:366)
        V [libjvm.so+0xb5ed04] Exceptions::fthrow(JavaThread*, char const*, int, Symbol*, char const*, ...)+0x404 (exceptions.cpp:193)
        V [libjvm.so+0x8d0e20] ClassFileParser::check_super_interface_access(InstanceKlass const*, JavaThread*)+0x140 (classFileParser.cpp:4329)
        V [libjvm.so+0x8d465c] ClassFileParser::fill_instance_klass(InstanceKlass*, bool, ClassInstanceInfo const&, JavaThread*)+0xbac (classFileParser.cpp:5326)
        V [libjvm.so+0x8d5590] ClassFileParser::create_instance_klass(bool, ClassInstanceInfo const&, JavaThread*)+0x90 (classFileParser.cpp:5169)
        V [libjvm.so+0x1117c94] KlassFactory::create_from_stream(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const&, JavaThread*)+0x3c8 (klassFactory.cpp:204)
        V [libjvm.so+0x1739ae8] SystemDictionary::resolve_class_from_stream(ClassFileStream*, Symbol*, Handle, ClassLoadInfo const&, JavaThread*)+0x98 (systemDictionary.cpp:890)
        V [libjvm.so+0xf5ba74] jvm_define_class_common(char const*, _jobject*, signed char const*, int, _jobject*, char const*, JavaThread*)+0x1d4 (jvm.cpp:913)
        V [libjvm.so+0xf5bcb0] JVM_DefineClassWithSource+0x90 (jvm.cpp:1077)

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: