8317294: Classloading throws exceptions over already pending exceptions

Backport-of: d4c904d81970bbe5b0afe1029eae705366779839